import "ucar/nc2/stream/ncStream.proto";

option java_package = "ucar.nc2.ft2.coverage.remote";
option java_outer_classname = "CdmrFeatureProto";

message CoordTransform {
  required bool isHoriz = 1;
  required string name = 2;          // short name, unique within dataset
  repeated Attribute params = 3;
}

enum AxisType {  // same as ucar.nc2.constants.AxisType
  RunTime=1;
  Ensemble=2;
  Time=3;
  GeoX=4;
  GeoY=5;
  GeoZ=6;
  Lat=7;
  Lon=8;
  Height=9;
  Pressure=10;
  RadialAzimuth=11;
  RadialDistance=12;
  RadialElevation=13;
  Spectral=14;
  TimeOffset=15;
}

enum AxisSpacing {  // same as CoverageCoordAxis.Spacing
  regular=1;
  irregularPoint=2;
  contiguousInterval=3;
  discontiguousInterval=4;
}

enum CoverageType {  // same as CoverageCoordSys.Type
  General=1;
  Curvilinear=2;
  Grid=3;
  Swath=4;
  Fmrc=5;
}

enum DependenceType {  // same as CoverageCoordAxis.DependenceType
  independent=1;     // has its own dimension, is a coordinate variable, eg x(x)
  dependent=2;       // aux coordinate, reftime(time) or time_bounds(time);
  scalar=3;          // reftime
  twoD=4;            // lat(x,y), time(reftime, time)
}

message CoordAxis {
  required string name = 1;          // short name, unique within dataset
  required DataType dataType = 2;
  repeated Attribute atts = 3;       // look for calendar attribute here?
  required AxisType axisType = 4;
  required string units = 5;
  optional string description = 6;

  required DependenceType depend = 7;
  optional string dependsOn = 8;    // depends on this axis

  required int64 nvalues = 10;
  required AxisSpacing spacing = 11;
  required double startValue = 12;
  required double endValue = 13;
  optional double resolution = 14;     // resolution = (end-start) / (nvalues-1)
  optional bytes values = 15;          // big endian doubles; not used for regular, may be deferred
}

message CoordSys {
  required string name = 1;               // must be unique in dataset's CoordSys
  repeated string axisNames = 2;
  repeated string transformNames = 3;
  optional CoverageType coverageType = 5;
}

message Coverage {
  required string name = 1;               // short name, unique within dataset
  required DataType dataType = 2;
  repeated Attribute atts = 4;
  required string coordSys = 5;
  optional string units = 6;
  optional string description = 7;
}

enum Calendar {  // same as ucar.nc2.time.Calendar
  gregorian=1;
  proleptic_gregorian=2;
  noleap=3;
  all_leap=4;
  uniform30day=5;
  julian=6;
  none=7;
}

message CalendarDateRange {
  required int64 start = 1;
  required int64 end = 2;
  required Calendar calendar = 3;
}

message Rectangle {
  required double startx = 1;
  required double starty = 2;
  required double incx = 3;
  required double incy = 4;
}

message CoverageDataset {
  required string name = 1;
  repeated Attribute atts = 2;
  required Rectangle latlonRect = 3;
  optional Rectangle projRect = 4;
  required CalendarDateRange dateRange = 5;

  repeated CoordSys coordSys = 6;
  repeated CoordTransform coordTransforms = 7;
  repeated CoordAxis coordAxes = 8;
  repeated Coverage grids = 9;
  optional CoverageType coverageType = 10;
}

//////////////////////////////////

message GeoReferencedArray {
  required string coverageName = 1;          // full escaped name.
  required DataType dataType = 2;
  optional bool bigend = 3 [default = true];
  optional uint32 version = 4 [default = 0];
  optional Compress compress = 5 [default = NONE];
  optional uint64 uncompressedSize = 6;

  repeated uint32 shape = 7;            // the shape of the returned array
  repeated string axisName = 8;         // each dimension corresponds to this axis
  required string coordSysName = 9;     // must have coordAxes corresponding to shape
}

message DataResponse {
  repeated CoordAxis coordAxes = 1;              // may be shared if asking for multiple grids
  repeated CoordSys coordSys = 2;                //    "
  repeated CoordTransform coordTransforms = 3;   //    "

  repeated GeoReferencedArray geoArray = 4;
}

//  cd c:/dev/github/thredds50/cdm/src/main/java
//  protoc --proto_path=. --java_out=. ucar/nc2/ft2/coverage/remote/cdmrfeature.proto